Fixed Age bug, UI additons.

--- a/FIFA23.Scripts.UI/MainWindow.xaml
+++ b/FIFA23.Scripts.UI/MainWindow.xaml
@@ -37,10 +37,15 @@
             </Button>
         </Grid>
         <Grid x:Name="TabsGrid" Margin="0 60 0 0">
-            <dragablz:TabablzControl x:Name="MainTab" BorderBrush="#FF25012B" SelectionChanged="TabablzControl_SelectionChanged">
-                <dragablz:TabablzControl.InterTabController>
+            <TabControl 
+                materialDesign:ColorZoneAssist.Mode="PrimaryDark"
+                Style="{StaticResource MaterialDesignFilledTabControl}"
+                x:Name="MainTab" 
+                BorderBrush="#FF25012B" 
+                SelectionChanged="TabablzControl_SelectionChanged" HorizontalContentAlignment="Left">
+                <!--<dragablz:TabablzControl.InterTabController>
                     <dragablz:InterTabController/>
-                </dragablz:TabablzControl.InterTabController>
+                </dragablz:TabablzControl.InterTabController>-->
                 <TabItem x:Name="SquadTab" Header="Squad">
                     <Grid x:Name="Sqaud" Margin="0,15,0,0" >
                         <Grid.ColumnDefinitions>
@@ -48,7 +53,7 @@
                             <ColumnDefinition Width="*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="5*"></RowDefinition>
+                            <RowDefinition Height="7*"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
                         <StackPanel Grid.ColumnSpan="2">
@@ -57,22 +62,30 @@
                                     <ColumnDefinition Width="*"></ColumnDefinition>
                                     <ColumnDefinition Width="*"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0"
+                                <TextBlock 
                                                HorizontalAlignment="Left"
                                                VerticalAlignment="Top"
                                                Style="{StaticResource MaterialDesignBody2TextBlock}"
-                                               Text="Import Info from career file" Foreground="#FF7B1FA2" Margin="10,10,0,0" FontFamily="Britannic Bold"
+                                               Text="Import Info from career file" Foreground="#FF25012B" Margin="10,10,0,0" FontFamily="Britannic Bold" Width="186"
                                         
                                     />
-                                <Button x:Name="ImportCareerInfo"
-                                            Background="#FF7B1FA2" BorderBrush="#FF7B1FA2" VerticalAlignment="Top" HorizontalAlignment="Right" Height="38" Width="50" Click="ImportCareerInfoButton_Click"
-                                        ToolTip="Imports Career player stats and&#x0a;team player links to a squad file" Grid.Column="0" Margin="0,0,105,0">
+                                <Button x:Name="ImportCareerInfoButton"
+                                         Style="{StaticResource MaterialDesignRaisedSecondaryDarkButton}" 
+                                         VerticalAlignment="Top" HorizontalAlignment="Right" Height="38" Width="54" Click="ImportCareerInfoButton_Click"
+                                        ToolTip="Imports Career player stats and&#x0a;team player links to a squad file" Grid.Column="0" Margin="0,0,86,0">
                                     <materialDesign:PackIcon
                                             Kind="Import" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Margin="0,1,0,1"/>
 
                                 </Button>
+                                <GroupBox Style="{StaticResource MaterialDesignGroupBox}"
+                                Header="Note" Width="250" Margin="10,50,0,5"  Foreground="White" VerticalContentAlignment="Stretch" HorizontalAlignment="Left" VerticalAlignment="Bottom" >
+                                    <TextBlock Text="Import your career to a squad file then modify your players and save, you can use the new squad file to create a new career" Foreground="#FF25012B" TextWrapping="Wrap" Width="234" Margin="0,0,0,5" />
+
+
+                                </GroupBox>
+
                                 <GroupBox x:Name="SquadScriptBox" Style="{StaticResource MaterialDesignGroupBox}" 
-                                  materialDesign:ColorZoneAssist.Mode="PrimaryDark"                            
+                                                             
                                   Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="1" Header="Scripts" Margin="15,0,15,0" FontFamily="Algerian">
                                     <StackPanel x:Name="SquadScriptsStack" >
 
@@ -86,11 +99,11 @@
                                                HorizontalAlignment="Left"
                                                VerticalAlignment="Center"
                                                Style="{StaticResource MaterialDesignBody2TextBlock}"
-                                               Text="User Team All Stats to 99" Foreground="#FF7B1FA2" Margin="10,0,0,0" FontFamily="Britannic Bold"
+                                               Text="User Team All Stats to 99" Foreground="#FF25012B" Margin="10,0,0,0" FontFamily="Britannic Bold"
                                         
                                     />
                                             <Button x:Name="SquadScriptOverallButton"                               
-                                        Style="{StaticResource MaterialDesignRaisedDarkButton}" 
+                                        Style="{StaticResource MaterialDesignRaisedSecondaryDarkButton}" 
                                         materialDesign:ButtonAssist.CornerRadius="5"
                                         ToolTip="Sets all your team players&#x0a;stats to 99"
                                         Content="Apply" Click="SquadScriptOverallButton_Click" HorizontalAlignment="Right" />
@@ -104,11 +117,11 @@
                                                HorizontalAlignment="Left"
                                                VerticalAlignment="Center"
                                                Style="{StaticResource MaterialDesignBody2TextBlock}"
-                                               Text="User Team Age to 15" Foreground="#FF7B1FA2" Margin="10,0,0,0" FontFamily="Britannic Bold"
+                                               Text="User Team Age to 15" Foreground="#FF25012B" Margin="10,0,0,0" FontFamily="Britannic Bold"
                                         
                                     />
                                             <Button x:Name="SqauadScriptAgeButton"                               
-                                        Style="{StaticResource MaterialDesignRaisedDarkButton}" 
+                                        Style="{StaticResource MaterialDesignRaisedSecondaryDarkButton}" 
                                         materialDesign:ButtonAssist.CornerRadius="5"
                                         Click="SquadSingleStatButton_Click"    
                                         ToolTip="Sets all your team players&#x0a;age to 15"
@@ -128,39 +141,46 @@
                                       Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                                       materialDesign:TextFieldAssist.HasClearButton="True"
                                       materialDesign:TextFieldAssist.SuffixText=""
-                                      materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueDarkBrush}"
-                                      materialDesign:ColorZoneAssist.Mode="PrimaryDark"
+                                      materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueDarkBrush}"                                
+                                      materialDesign:ColorZoneAssist.Mode="Light"
                                       materialDesign:HintAssist.Hint="Player"
                                       materialDesign:HintAssist.HelperText="Select one Player"
-                                      MinWidth="128" Margin="114,0,0,0" BorderBrush="#FF7B1FA2" Foreground="Black"                                     
-                                      SelectionChanged="playerComboBox_SelectionChanged" Width="150" HorizontalAlignment="Left"/>
+                                      MinWidth="128" Margin="114,0,0,0" BorderBrush="#FF7B1FA2" Foreground="DarkBlue" Width="150" HorizontalAlignment="Left"/>
                                 <ComboBox x:Name="StatsComboBox"
                                       Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                                       materialDesign:TextFieldAssist.HasClearButton="True"
                                       materialDesign:TextFieldAssist.SuffixText=""
                                       materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueDarkBrush}"
-                                      materialDesign:ColorZoneAssist.Mode="PrimaryDark"
+                                      materialDesign:ColorZoneAssist.Mode="Light"
                                       materialDesign:HintAssist.Hint="Stat"
                                       materialDesign:HintAssist.HelperText="Select one Stat"
-                                      MinWidth="128" BorderBrush="#FF7B1FA2" Foreground="Black"                                   
-                                      SelectionChanged="playerComboBox_SelectionChanged" Width="150" HorizontalAlignment="Left" Margin="286,0,0,0"/>
+                                      MinWidth="128" BorderBrush="#FF7B1FA2" Foreground="DarkBlue" Width="150" HorizontalAlignment="Left" Margin="286,0,0,0"/>
                                 <TextBox
                                     x:Name="ValueTextBox"                     
                                     Margin="465,0,0,0"
                                     PreviewTextInput="NumericOnly"
                                     materialDesign:HintAssist.Hint="Value"                      
                                     materialDesign:TextFieldAssist.HasClearButton="True"
-                                    materialDesign:TextFieldAssist.HasOutlinedTextField="True"                       
+                                    materialDesign:TextFieldAssist.HasOutlinedTextField="True"
+                                    materialDesign:TextFieldAssist.TextFieldCornerRadius="3"
                                     HorizontalAlignment="Left" BorderBrush="#FF7B1FA2" Width="100" VerticalAlignment="Center" Height="50" TextWrapping="Wrap" KeyDown="ValueTextBox_KeyDown"/>
                                 <TextBlock Grid.Column="0"
                                     HorizontalAlignment="Left"
                                     VerticalAlignment="Top"
                                     Style="{StaticResource MaterialDesignBody2TextBlock}"
-                                    Text="Edit player" Foreground="#FF7B1FA2" Margin="18,24,0,0" FontFamily="Britannic Bold" Height="19" Width="91"
+                                    Text="Edit player" Foreground="#FF25012B" Margin="10,24,0,0" FontFamily="Britannic Bold" Height="19" Width="91"
                                         
                                     />
 
+                                <ToggleButton x:Name="entireTeamCheckBox"
+  Style="{StaticResource MaterialDesignSwitchDarkToggleButton}"
+  ToolTip="MaterialDesignSwitchDarkToggleButton"
+  IsChecked="False" HorizontalAlignment="Right" Margin="0,0,80,0" Click="entireTeamCheckBox_Click" />
+
+
                             </Grid>
+
+
 
                         </StackPanel>
 
@@ -173,8 +193,7 @@
                             x:Name="StatusSnackBar"
                             HorizontalAlignment="Stretch" Background="#FF25012B" Foreground="#FFFFF5F5"                              
                             ActionButtonStyle="{DynamicResource MaterialDesignFlatLightButton}"  
-                            ActionButtonPlacement="Inline">
-                        </materialDesign:Snackbar>
+                            ActionButtonPlacement="Inline"/>
 
 
 
@@ -236,7 +255,7 @@
                     <TextBlock Text="https://github.com/alisharey/Fifa23-CareerMode-SaveFile-Scripts" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </TabItem>
 
-            </dragablz:TabablzControl>
+            </TabControl>
         </Grid>
     </Grid>
 </Window>
